fix: Multi linkout dropdown not showing properly in SVG export

--- a/web/style/datavzrd.css
+++ b/web/style/datavzrd.css
@@ -364,3 +364,7 @@ footer {
     display: block;
     margin: 5rem auto;
 }
+
+.linkout-raw-value {
+    display: none;
+}
